fix: update webhook message
